# r-type

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
assets/: enemy_waves.json  map.json
game/: CMakeLists.txt  levels.txt  map.txt  mobs.txt
game/include/: Background.hpp  Components.hpp  EnemyWaves.hpp  Errors.hpp  Fire.hpp  Game.hpp  JSONParser.hpp  Map.hpp  Obstacle.hpp  Systems.hpp
game/src/: Background.cpp  Components.cpp  Fire.cpp  Game.cpp  JSONParser.cpp  Obstacle.cpp  Systems.cpp  main.cpp
include/: UwUgine.hpp
uwugine/: CMakeLists.txt
uwugine/demo/: CMakeLists.txt
uwugine/demo/include/: UwUgine.hpp
uwugine/demo/src/: main.cpp
uwugine/include/: Basic_Componants.hpp  Basic_Systems.hpp  Bindings.hpp  Client.hpp  Clock.hpp  Color.hpp  Container.hpp  Exception.hpp  Hitbox.hpp  Multi_Components.hpp  Object.hpp  Point.hpp  Polygone.hpp  Registery.hpp  Segment.hpp  Sound.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Window.hpp  Zipper_iterator.hpp
uwugine/src/: Client.cpp  Clock.cpp  Exception.cpp  Hitbox.cpp  Point.cpp  Polygone.cpp  Registery.cpp  Segment.cpp  Sound.cpp  Sprite.cpp  Systems.cpp  Text.cpp  Texture.cpp  Window.cpp
uwugine/tests/: sparse_array.cpp
